3.2.2-beta1
* Updating progression tooltip with new raids
* fixed bug in calculation artifact iLVL (https://mods.curse.com/addons/wow/elvui-enhanced-again?comment=78)
* fixed missing equipmentset in equipmentset change feature

3.2.1-beta1
* version updated to 7.2
* removed TargetNearestUseOld feature since Blizzard reverted the tab targerting to pre-wow (by default)
* fixed bug #16 (https://github.com/nickbock/ElvUI_Enhanced_Again/issues/16)

3.2.0-beta8
* fixed hide roleicon on combat (https://github.com/nickbock/ElvUI_Enhanced_Again/issues/14)

3.2.0-beta7
* updated locationtext for wow 7.1 changes

3.2.0-beta6
* fixed lua error for elvui-10.24
* remove chatmessage for oldtabtarget

3.2.0-beta5
* Updated progression check to Legion 7.0 raids.

3.2.0-beta4
* Added an option to enable the pre legion tab targeting system. You will find this option in the general ElvUI settings. It applies the "/console TargetNearestUseOld 1" command automatically when you logon.

3.2.0-beta3
* Itemlevel for twohanded artifact weapons fixed - Thanks q3fuba for the help!
* When entering the game and a Class Hall mission is complete the alert broke the itemlvl update. This is now fixed.

3.2.0-beta2
* This update breaks support for older version of ElvUI. 
* Updated the ElvUI Enhanced config to work with the latest ElvUI update (10.17+). 
* Everyone should update to the latest ElvUI (10.19). 
* If you don't update you need to keep using 3.2.0-beta1.

3.2.0-beta1
* Changed name of the add-on and switched curseforge project
* Moved the DataText toggles to the correct settings panel
* Small localization updates
* fixed alignment bugs in the minimap enhancement (#29, #28)
* Disabled the Farmer module in preparation of deleting the module

3.1.1-beta6
* Correctly disable nameplate module (caused lua errors for some people)

3.1.1-beta5
* Updated the equipment changer to the new spec system

3.1.1-beta4
* Made the minimapbuttons fix a bit more general (tickets 24, 23)

3.1.1-beta3